solutions/delivery/application_delivery_controller/nginx/nginx-plus/google/firewall.tf
# firewall
# mgmt
resource "google_compute_firewall" "mgmt" {
  name    = "${var.projectPrefix}mgmt-firewall-${random_pet.buildSuffix.id}"
  network = module.google_network.vpcs["public"].name

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["22", "443", "80"]
  }

  source_ranges = var.adminSourceAddress
}

resource "google_compute_firewall" "nginx-mgmt" {
  name    = "${var.projectPrefix}nginx-firewall-${random_pet.buildSuffix.id}"
  network = module.google_network.vpcs["public"].name

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = var.adminSourceAddress
}

resource "google_compute_firewall" "default-allow-internal-int" {
  name    = "${var.projectPrefix}-default-allow-internal-int-${random_pet.buildSuffix.id}"
  network = module.google_network.vpcs["public"].name

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["0-65535"]
  }
  allow {
    protocol = "udp"
    ports    = ["0-65535"]
  }
  priority = "65534"

  source_ranges = ["10.0.20.0/24"]
}
resource "google_compute_firewall" "allow-internal-egress" {
  name      = "${var.projectPrefix}-allow-internal-egress-${random_pet.buildSuffix.id}"
  network   = module.google_network.vpcs["public"].name
  direction = "EGRESS"

  allow {
    protocol = "tcp"
    ports    = ["443"]
  }
  priority = "65533"

  destination_ranges = ["10.0.20.0/24"]
}

resource "google_compute_firewall" "app" {
  name    = "${var.projectPrefix}-app-${random_pet.buildSuffix.id}"
  network = module.google_network.vpcs["public"].name

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports    = ["80", "443"]
  }

  source_ranges = var.adminSourceAddress
}

resource "google_compute_firewall" "iap-ingress" {
  name    = "${var.projectPrefix}-iap-firewall-${random_pet.buildSuffix.id}"
  network = module.google_network.vpcs["public"].name

  allow {
    protocol = "tcp"
  }

  allow {
    protocol = "tcp"
    ports    = ["22", "443", "80"]
  }

  source_ranges = ["35.235.240.0/20"]
}
